--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     font-family: Arial, sans-serif;
     text-align: center;
+    box-sizing: border-box;
   }
   
   body.main {
@@ -44,6 +45,12 @@
   button:hover {
       background-color: #333;
   }
+
+  .type-user{
+    display: flex;
+    gap: 12px;
+    align-items: center;
+  }
   
   .message {
     text-align: center;
@@ -85,7 +92,42 @@
   .lose {
     background-color: #5c0707 !important;
   }
-  
+
+  .modal{
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .content{
+    padding: 40px;
+    border-radius: 20px;
+    display: flex;
+    position: relative;
+    gap: 20px;
+    background-color: gray;
+  }
+
+  .close-modal{
+    position: absolute;
+    padding: 0px;
+    border-radius: 20px;
+    width: 25px;
+    height: 25px;
+    top: 5px;
+    right: 5px;
+    background-color: #00000000;
+    color: white;
+  }
+
+  .close-modal:hover{
+    background-color: rgba(255, 0, 0, 0.5);
+  }
+
   @keyframes spin {
     0% {
       transform: rotate(0deg);
